--- a/templates/main.html
+++ b/templates/main.html
@@ -172,8 +172,8 @@
                     </div>
                   </div -->
 
-                  <div id=app></div>
-                  <script src=/js/chunk-vendors.6b3bf59f.js> </script> <script src=/js/app.4c6fc585.js> </script>
+                  <!-- div id=app></div>
+                  <script src=/js/chunk-vendors.6b3bf59f.js> </script> <script src=/js/app.4c6fc585.js> </script -->
                 </div>
               <!-- Materials GCr15, QT800 -->
               <div class="row">
@@ -184,7 +184,7 @@
                         <div class="text-value-lg" id="name_of_material">GCr15</div>
                         <div>Details</div>
                       </div>
-                      <div class="btn-group">
+                      <!-- div class="btn-group">
                         <button class="btn btn-transparent dropdown-toggle p-0" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           <svg class="c-icon">
                             <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-settings"></use>
@@ -194,7 +194,7 @@
                           <a class="dropdown-item" href="/material/content/1">Experiment</a>
                           <a class="dropdown-item" href="/prediction/1">Prediction</a>
                         </div>
-                      </div>
+                      </div -->
                     </div>
                     <div class="c-chart-wrapper mt-3 mx-3" style="height:70px;">
                       <canvas class="chart" id="card-chart1" height="70"></canvas>
@@ -209,7 +209,7 @@
                         <div class="text-value-lg">QT800</div>
                         <div>Details</div>
                       </div>
-                      <div class="btn-group">
+                      <!-- div class="btn-group">
                         <button class="btn btn-transparent dropdown-toggle p-0" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           <svg class="c-icon">
                             <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-settings"></use>
@@ -219,7 +219,7 @@
                           <a class="dropdown-item" href="/material/content/2">Experiment</a>
                           <a class="dropdown-item" href="/prediction/2">Prediction</a>
                         </div>
-                      </div>                        
+                      </div -->                        
                     </div>
                     <div class="c-chart-wrapper mt-3 mx-3" style="height:70px;">
                       <canvas class="chart" id="card-chart2" height="70"></canvas>
@@ -297,7 +297,8 @@
               <!-- /.row-->
               <div class="card border-primary">
                 <div class="card-header">
-                  <a class="link" href="main">Advanced Search</a>
+                  <!-- a class="link" href="main">Advanced Search</a -->
+                  Advanced Search
                 </div>
                 <div class="card-body">
                   根据 材料名称、实验名称、试棒编号查询。其次是根据日期、旋转频率、采样频率、材料半径、材料长度查询。<br>
@@ -305,40 +306,46 @@
               </div>
               <div class="card border-success">
                 <div class="card-header">
-                  <a class="link" href="main">Hysteresis Loops</a>
+                  <!-- a class="link" href="main">Hysteresis Loops</a -->
+                  Hysteresis Loops
                 </div>
                 <div class="card-body">绘制试棒的滞回环</div>
               </div>
               <div class="card border-success">
                 <div class="card-header">
-                  <a class="link" href="main">Prediction</a>
+                  <!-- a class="link" href="main">Prediction</a -->
+                  Prediction
                 </div>
                 <div class="card-body">根据实验数据预测试棒寿命</div>
               </div>
               <div class="card border-success">
                 <div class="card-header">
-                  <a class="link" href="main">Compare Materials</a>
+                  <!-- a class="link" href="main">Compare Materials</a -->
+                  Compare Materials
                 </div>
                 <div class="card-body">比较不同材料的寿命（预测）</div>
               </div>
               <!-- /.row-->
               <div class="card border-info">
                 <div class="card-header">
-                  <a class="link" href="main">Algorithm</a>
+                  <!-- a class="link" href="main">Algorithm</a -->
+                  Algorithm
                 </div>
                 <div class="card-body">Basquin Manson-Coffin Mura-Manson Grey</div>
               </div>
               <!-- /.row-->
               <div class="card border-warning">
                 <div class="card-header">
-                  <a class="link" href="main">Online Analysis</a>
+                  <!-- a class="link" href="main">Online Analysis</a -->
+                  Online Analysis
                 </div>
                 <div class="card-body">在线分析工具，与后台的Matlab Server交互</div>
               </div>
               <!-- /.row-->
               <div class="card border-danger">
                 <div class="card-header">
-                  <a class="link" href="main">Online Experiment</a>
+                  <!-- a class="link" href="main">Online Experiment</a -->
+                  Online Experiment
                 </div>
                 <div class="card-body">当前正在进行的试验。实时数据显示，监控</div>
               </div>
